# iTerm2

./: .agentignore  .gitignore  .gitmodules  .slather.yml  .swiftlint.yml  .travis.yml  .zshenv  105.patch  106.patch  144.patch  AGENTS.md  AdvancedWorkingDirectoryWindowController.h  AdvancedWorkingDirectoryWindowController.m  AlertTrigger.h  AlertTrigger.m  AppearancePreferencesViewController.h  AppearancePreferencesViewController.m  AppleScriptTest.h  AppleScriptTest.m  ArrangementPreviewView.m  AsyncHostLookupController.h  AsyncHostLookupController.m  Autocomplete.h  Autocomplete.m  BackgroundThread.h  BackgroundThread.m  BellTrigger.h  BellTrigger.m  BookmarkListView.h  BookmarkListView.m  BookmarkModel.h  BookmarkModel.m  BookmarkModelWrapper.h  BookmarkModelWrapper.m  BookmarkRow.h  BookmarkRow.m  BookmarkTableView.h  BookmarkTableView.m  BookmarksController.h  BookmarksController.m  (+598 more)
.circleci/: config.yml
.claude/: settings.local.json
.github/: FUNDING.yml
.hooks/: pre-commit  pre-push
.pai/: gstack.json  harness.json  omc.md
AILiveHarness/: AICassette.swift  AILiveAppleIntelligenceClassifier.swift  AILiveAttachmentFixtures.swift  AILiveAttachmentMatrix.swift  AILiveAttachmentTests.swift  AILiveChatQueueTests.swift  AILiveDriver.swift  AILiveHarness.swift
BetterFontPicker/: Makefile
CGSInternal/: CGSCIFilter.h  (+10 more)
hudsucker-ffi/: CERT_ERROR_HANDLING.md  Cargo.toml  build  build.rs  cbindgen.toml  example_cert_error_template.html  hudsucker_ffi.h  test_example.c
hudsucker-ffi/examples/: cert_error_example.c
hudsucker-ffi/src/: cert_errors.rs  lib.rs
(+7116 files in other folders)
