[package]
name = "hudsucker-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hudsucker = { path = "../submodules/hudsucker", features = ["decoder", "rcgen-ca", "rustls-client"] }
tokio = { version = "1.24.2", features = ["full"] }
hyper = "1.1.0"
http = "1.1.0"
futures = "0.3.11"
libc = "0.2"
once_cell = "1.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.27.0"

[dependencies.rcgen]
version = "0.13.0"
features = ["x509-parser"]